welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:1: error: Missing closing brace `}' assumed here
def noTriples(nums:Array[Int]): Boolean = {
^