welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var h:Boolean = true
	for (k<-1 to nums.length-2) {
		if (nums(k) == nums(k+1) && nums(k) == nums(k+2)) {h=false) 
	}
	return h
}
